--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,12 @@ dependencies = [
     "gradio (>=5.46.0,<6.0.0)",
     "langchain-ollama (>=0.3.8,<0.4.0)",
     "langgraph (>=0.6.7,<0.7.0)",
-    "pyppeteer (>=2.0.0,<3.0.0)"
+    "pyppeteer (>=2.0.0,<3.0.0)",
+    "langserve (>=0.3.2,<0.4.0)",
+    "langchain-community (>=0.3.29,<0.4.0)",
+    "fastapi (>=0.117.1,<0.118.0)",
+    "uvicorn (>=0.36.0,<0.37.0)",
+    "sse-starlette (>=3.0.2,<4.0.0)"
 ]
 
 [tool.poetry]
