--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,10 @@ dependencies = [
     "langchain-community (>=0.3.29,<0.4.0)",
     "fastapi (>=0.117.1,<0.118.0)",
     "uvicorn (>=0.36.0,<0.37.0)",
-    "sse-starlette (>=3.0.2,<4.0.0)"
+    "sse-starlette (>=3.0.2,<4.0.0)",
+    "pypdf (>=4.2.0,<5.0.0)",
+    "langchain-upstage (>=0.7.3,<0.8.0)",
+    "langchain-google-genai (>=2.1.12,<3.0.0)"
 ]
 
 [tool.poetry]
