--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "NamEon",email = "143885031+skadjs@users.noreply.github.com"}
 ]
 readme = "README.md"
-requires-python = "^3.11,<=4.0"
+requires-python = "<3.15,>=3.10"
 dependencies = [
     "python-dotenv (>=1.1.1,<2.0.0)",
     "langchain (>=0.3.27,<0.4.0)",
@@ -22,7 +22,8 @@ dependencies = [
     "sse-starlette (>=3.0.2,<4.0.0)",
     "pypdf (>=4.2.0,<5.0.0)",
     "langchain-upstage (>=0.7.3,<0.8.0)",
-    "langchain-google-genai (>=2.1.12,<3.0.0)"
+    "langchain-google-genai (>=2.1.12,<3.0.0)",
+    "faiss-cpu (>=1.12.0,<2.0.0)"
 ]
 
 [tool.poetry]
