--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ readme = "README.md"
 requires-python = "<3.15,>=3.10"
 dependencies = [
     "python-dotenv (>=1.1.1,<2.0.0)",
-    "langchain (>=0.3.27,<0.4.0)",
     "langchain-openai (>=0.3.33,<0.4.0)",
     "gradio (>=5.46.0,<6.0.0)",
     "langchain-ollama (>=0.3.8,<0.4.0)",
@@ -26,7 +25,8 @@ dependencies = [
     "faiss-cpu (>=1.12.0,<2.0.0)",
     "sentence-transformers (>=5.1.1,<6.0.0)",
     "langchain-huggingface (>=0.3.1,<0.4.0)",
-    "scikit-learn (>=1.7.2,<2.0.0)"
+    "scikit-learn (>=1.7.2,<2.0.0)",
+    "chromadb (>=1.1.0,<2.0.0)"
 ]
 
 [tool.poetry]
