--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,8 @@ dependencies = [
     "sentence-transformers (>=5.1.1,<6.0.0)",
     "langchain-huggingface (>=0.3.1,<0.4.0)",
     "scikit-learn (>=1.7.2,<2.0.0)",
-    "chromadb (>=1.1.0,<2.0.0)"
+    "chromadb (>=1.1.0,<2.0.0)",
+    "docx2txt (>=0.9,<0.10)"
 ]
 
 [tool.poetry]
