--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,8 @@ dependencies = [
     "langchain-huggingface (>=0.3.1,<0.4.0)",
     "scikit-learn (>=1.7.2,<2.0.0)",
     "chromadb (>=1.1.0,<2.0.0)",
-    "docx2txt (>=0.9,<0.10)"
+    "docx2txt (>=0.9,<0.10)",
+    "gradio-pdf (>=0.0.22,<0.0.23)"
 ]
 
 [tool.poetry]
